--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     margin: auto;
     display: flex;
     align-items: center;
+    
 }
 .logo{
     width: 120px;
@@ -71,3 +72,106 @@ nav ul li a:hover{
     letter-spacing: 3px;
     line-height: 65px;
 }
+.gallery-box{
+    max-width: 400px;
+    position: relative;
+    margin: auto;
+}
+.gallery-box img{
+    width: 100%;
+    border: 10px solid rgba(255, 255, 255, 0.2);
+    box-sizing: border-box;
+}
+.gallery-box ul{
+    position: absolute;
+    right: -100px;
+    top: 50%;
+    transform: translate(-50%);
+}
+.gallery-box ul li{
+    list-style: none;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 0 0;
+    margin-bottom: 30px;
+    cursor: pointer;
+    position: relative;
+
+}
+.gallery-box .active{
+    color: #e7c82f;
+}
+.gallery-box ul li::after{
+    content: '';
+    width: 30px;
+    height: 2px;
+    background: #e7c82f;
+    position: absolute;
+    top: 8px;
+    left: -35px;
+}
+
+
+
+
+
+/* The humburg menu code */
+
+label{
+    display:flex;
+     flex-direction:column;
+     width:70px;
+     cursor:pointer;
+   }
+   
+   label span{
+     background: #fff;
+     border-radius:10px;
+     height:7px;
+     margin: 7px 0;
+     transition: .4s  cubic-bezier(0.68, -0.6, 0.32, 1.6);
+   
+   }
+   
+   
+   span:nth-of-type(1){
+     width:50%;
+     
+   }
+   
+   span:nth-of-type(2){
+     width:100%;
+   }
+   
+   
+   span:nth-of-type(3){
+     width:75%;
+    
+   }
+   
+   
+   input[type="checkbox"]{
+     display:none;
+   }
+   
+   
+   input[type="checkbox"]:checked ~ span:nth-of-type(1){
+     transform-origin:bottom;
+     transform:rotatez(45deg) translate(8px,0px)
+   }
+   
+   
+   input[type="checkbox"]:checked ~ span:nth-of-type(2){
+     
+     transform-origin:top;
+     transform:rotatez(-45deg)
+   }
+   
+   
+   input[type="checkbox"]:checked ~ span:nth-of-type(3){
+     
+     transform-origin:bottom;
+     width:50%;
+     transform: translate(30px,-11px) rotatez(45deg);
+   
+   }
